tests/Fase2-Semantic/error/t44-array_declaration_of_size_0.ctds
class aux {

}

class main {
    integer x;
    integer arr[0];

    integer add( integer b){
        integer a;
        a = x+b;
        return a;
    }

    void main(){
        x=0;
        add(2);
    }
    
}
